[gd_scene load_steps=3 format=2]

[ext_resource path="res://Acoustic/acoustic_env_void.tres" type="Environment" id=1]
[ext_resource path="res://Acoustic/Ear/Ear.gd" type="Script" id=2]

[node name="Ear" type="Spatial"]
script = ExtResource( 2 )

[node name="FrontView" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="FrontView"]
cull_mask = 2147484672
environment = ExtResource( 1 )
current = true
fov = 90.0
near = 0.01
far = 340.0

[node name="UpView" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="UpView"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
cull_mask = 2147484672
environment = ExtResource( 1 )
current = true
fov = 90.0
near = 0.01
far = 340.0

[node name="DownView" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="DownView"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
cull_mask = 2147484672
environment = ExtResource( 1 )
current = true
fov = 90.0
near = 0.01
far = 340.0

[node name="LeftView" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="LeftView"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
cull_mask = 2147484672
environment = ExtResource( 1 )
current = true
fov = 90.0
near = 0.01
far = 340.0

[node name="BackView" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="BackView"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
cull_mask = 2147484672
environment = ExtResource( 1 )
current = true
fov = 90.0
near = 0.01
far = 340.0

[node name="RightView" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="RightView"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
cull_mask = 2147484672
environment = ExtResource( 1 )
current = true
fov = 90.0
near = 0.01
far = 340.0

[node name="FrontXForm" type="RemoteTransform" parent="."]
remote_path = NodePath("../FrontView/Camera")

[node name="UpXForm" type="RemoteTransform" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
remote_path = NodePath("../UpView/Camera")

[node name="DownXForm" type="RemoteTransform" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
remote_path = NodePath("../DownView/Camera")

[node name="BackXForm" type="RemoteTransform" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
remote_path = NodePath("../BackView/Camera")

[node name="LeftXForm" type="RemoteTransform" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
remote_path = NodePath("../LeftView/Camera")

[node name="RightXForm" type="RemoteTransform" parent="."]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )
remote_path = NodePath("../RightView/Camera")
